<resources>
    <string name="app_name">Sổ Thu Chi</string>
    <string name="Key1">1</string>
    <string name="Key2">2</string>
    <string name="Key3">3</string>
    <string name="Key4">4</string>
    <string name="Key5">5</string>
    <string name="Key6">6</string>
    <string name="Key7">7</string>
    <string name="Key8">8</string>
    <string name="Key9">9</string>
    <string name="Key0">0</string>
    <string name="KeyC">C</string>
    <string name="KeyDivide">÷</string>
    <string name="KeyMulti">×</string>
    <string name="KeyMinus">-</string>
    <string name="KeyAdd">+</string>
    <string name="KeyDot">,</string>
    <string name="KeyEqual">=</string>
    <string name="Key000">000</string>
    <string name="KeyDone">OK</string>
    <string name="noname" />
    <string name="Records">Ghi chép</string>
    <string name="Accounts">Tài khoản</string>
    <string name="Budget">Hạn mức chi</string>
    <string name="Reports">Báo cáo</string>
    <string name="Setting">Cài đặt</string>
    <string name="Expense">Chi tiền</string>
    <string name="ExpenseDescription">Khi chi tiêu, cho vay, trả nợ.</string>
    <string name="Income">Thu tiền</string>
    <string name="IncomeDescription">Khi có khoản thu nhập, thu nợ, đi vay.</string>
    <string name="Transfer">Chuyển khoản</string>
    <string name="TransferDescription">Chuyển tiền giữa các tài khoản trong Sổ của bạn.</string>
    <string name="Amount">Số tiền</string>
    <string name="category">Mục chi</string>
    <string name="Date">Ngày</string>
    <string name="Event">Sự kiện</string>
    <string name="CategoryIncome">Mục thu</string>
    <string name="Description">Diễn giải</string>
    <string name="ToAccount">Vào tài khoản</string>
    <string name="Category">Hạng mục chi</string>
    <string name="search">Tìm kiếm</string>
    <string name="changePositionAccount">Change position Account</string>
    <string name="addAccount">Thêm tài khoản</string>
    <string name="money">₫</string>
    <string name="editAccount">Sửa tài khoản</string>
    <string name="Balance">Còn:</string>
    <string name="Save">Lưu</string>
    <string name="fromAccount">Từ tài khoản</string>
    <string name="financialHistory">Lịch sử thu chi</string>
    <string name="selecteAccount">Chọn tài khoản</string>
    <string name="previous">back</string>
    <string name="description">Diễn giải</string>
    <string name="done">Xong</string>
    <string name="cancel">Hủy</string>
    <string name="addBudget">Thêm hạn mức</string>
    <string name="expenseHistory">Chi:</string>
    <string name="soTienBanDau">Số tiền ban đầu</string>
    <string name="name">Tên</string>
    <string name="accountType">Loại tài khoản</string>
    <string name="moneyType">Loại tiền tệ</string>
    <string name="accountName">Tên tài khoản</string>
    <string name="Delete">Xóa</string>
    <string name="tvIncome">Thu:</string>
    <string name="tvExpense">Chi:</string>
    <string name="dateOfWeek">Thứ</string>
    <string name="budgetName">Tên hạn mức</string>
    <string name="date">Thời gian</string>
    <string name="editBudget">Sửa hạn mức</string>
    <string name="budgetCategory">Hạng mục:</string>
    <string name="budgetExpense">Đã chi:</string>
    <string name="budgetRemain">Còn:</string>
    <string name="budgetMoney">Hạn mức:</string>
    <string name="viewBy">Xem theo:</string>
    <string name="expense">CHI</string>
    <string name="ReportExpenseIncome">Tình hình thu chi</string>
    <string name="ReportExpenseAnalysis">Thống kê chi tiêu</string>
    <string name="time">Thời gian</string>
    <string name="noticeNoMoney">Bạn chưa nhập \"Số tiền\".</string>
    <string name="noticeNoCategory">Bạn chưa nhập \"Mục thu\".</string>
    <string name="noticeNoCategoryExpense">Bạn chưa nhập \"Mục chi\".</string>
    <string name="noticeNoAccount">Bạn chưa nhập \"Vào tài khoản\".</string>
    <string name="noticeNoAccountExpense">Bạn chưa nhập \"Từ tài khoản\".</string>
    <string name="IncomeCategory">Hạng mục thu</string>
    <string name="incomeHistory">Thu:</string>
    <string name="noticeNoAccountName">Bạn chưa nhập \"Tên tài khoản\".</string>
    <string name="noticeNoAccountType">Bạn chưa chọn \"Loại tài khoản\".</string>
    <string name="noticeNoMoneyType">Bạn chưa chọn \"Loại tiền tệ\".</string>
    <string name="deleteTitle">Xóa tài khoản!</string>
    <string name="deleteMessage">Nếu bạn xóa tài khoản này, tất cả các bản ghi chép liên quan cũng sẽ bị xóa. Bạn có thực sự muốn xóa không?</string>
    <string name="remainMoney">Số tiền hiện còn</string>
    <string name="startMoney">Số tiền ban đầu</string>
    <string name="remain">Còn:</string>
    <string name="deleteFinancialTitle">Xóa bản ghi!</string>
    <string name="deleteFinancialMessage">Bạn có thực sự muốn xóa bản ghi này không?</string>
    <string name="income">THU</string>
    <string name="accounts">Tài khoản:</string>
    <string name="fromDate">Từ ngày</string>
    <string name="toDate">Đến ngày</string>
    <string name="ok">Đồng ý</string>
    <string name="pickTime">Chọn thời gian</string>
    <string name="all">Tất cả tài khoản</string>
    <string name="open">(</string>
    <string name="close">%)</string>
    <string name="close2">)</string>
    <string name="noticeNoDate">Bạn chưa nhập \"Thời gian\".</string>
    <string name="noticeNoBudget">Bạn chưa nhập \"Tên hạn mức\".</string>
    <string name="edit">Sửa</string>
    <string name="deleteBudgetTitle">Xóa hạn mức chi!</string>
    <string name="deleteBudgetMessage">Bạn có thực sự muốn xóa hạn mức chi này không?</string>
    <string name="categories">Hạng mục chi:</string>
    <string name="Language">Ngôn ngữ</string>
    <string name="ResetData">Xóa dữ liệu</string>
    <string name="ProductInfomation">About</string>
    <string name="selectLanguage">Chọn ngôn ngữ</string>
    <string name="resetDataTitle">Xóa toàn bộ dữ liệu</string>
    <string name="resetDataMessage">Chức năng này sẽ xóa toàn bộ dữ liệu Ghi chép trên thiết bị của bạn. Dữ liệu bị xóa sẽ không thể khôi phục lại được. Bạn có chắc chắn muốn thực hiện chức năng này không?</string>
    <string name="positive">Có</string>
    <string name="negative">Không</string>
    <string name="saved">Đã lưu!</string>
    <string name="addSuccessfully">Thêm thành công!</string>
    <string name="deleteSuccessfully">Xóa thành công!</string>
    <string name="editSuccessfully">Chỉnh sửa thành công!</string>
    <string name="overExpense">Bội chi:</string>
    <string name="about_me">Nguyễn Hoài Nam</string>
    <string name="version">Version 1.0</string>
    <string name="final_project">Đồ án tốt nghiệp</string>
    <string name="aboutDetail">Sản phẩm được thực hiện bởi sinh viên Nguyễn Hoài Nam - Khoa CNTT - Trường ĐHBK - ĐHĐN</string>
    <string name="author">Tác giả</string>
    <string name="code">102120185</string>
    <string name="total">Tổng cộng</string>
    <string name="ReportFinancialStatement">Tài chính hiện tại</string>
    <string-array name="day_of_week">
        <item>\"\"</item>
        <item>Chủ Nhật</item>
        <item>Thứ Hai</item>
        <item>Thứ Ba</item>
        <item>Thứ Tư</item>
        <item>Thứ Năm</item>
        <item>Thứ Sáu</item>
        <item>Thứ Bảy</item>
    </string-array>
    <string-array name="income_category">
        <item>Lương</item>
        <item>Thưởng</item>
        <item>Được cho/tặng</item>
        <item>Thu nợ</item>
        <item>Khác</item>
    </string-array>
    <string-array name="group_row_category">
        <item>Ăn uống</item>
        <item>Đi lại</item>
        <item>Dịch vụ sinh hoạt</item>
        <item>Con cái</item>
        <item>Trang phục</item>
        <item>Hiếu hỉ</item>
        <item>Nhà cửa</item>
        <item>Hưởng thụ</item>
        <item>Sức khỏe</item>
        <item>Phát triển bản thân</item>
    </string-array>
    <string-array name="child_row_anuong">
        <item>Cafe</item>
        <item>Đi chợ/Siêu thị</item>
        <item>Ăn tiệm</item>
    </string-array>
    <string-array name="child_row_dilai">
        <item>Xăng xe</item>
        <item>Sửa chữa</item>
        <item>Bảo hiểm xe</item>
        <item>Taxi</item>
        <item>Xe khách</item>
    </string-array>
    <string-array name="child_row_dichvusinhhoat">
        <item>Điện nước</item>
        <item>Internet</item>
        <item>Điện thoại di động</item>
        <item>Gas</item>
        <item>Truyền hình</item>
    </string-array>
    <string-array name="child_row_concai">
        <item>Học phí</item>
        <item>Sách vở</item>
        <item>Sữa</item>
        <item>Đồ chơi</item>
        <item>Tiêu vặt</item>
    </string-array>
    <string-array name="child_row_trangphuc">
        <item>Quần áo</item>
        <item>Giày dép</item>
        <item>Phụ kiện khác</item>
    </string-array>
    <string-array name="child_row_hieuhi">
        <item>Cưới xin</item>
        <item>Ma chay</item>
        <item>Thăm hỏi</item>
        <item>Biếu tặng</item>
    </string-array>
    <string-array name="child_row_nhacua">
        <item>Mua sắm đồ đạc</item>
        <item>Thuê nhà</item>
        <item>Sửa nhà</item>
    </string-array>
    <string-array name="child_row_huongthu">
        <item>Vui chơi giải trí</item>
        <item>Du lịch</item>
        <item>Làm đẹp</item>
    </string-array>
    <string-array name="child_row_suckhoe">
        <item>Khám chữa bệnh</item>
        <item>Thuốc men</item>
        <item>Thể thao</item>
    </string-array>
    <string-array name="child_row_phattrienbanthan">
        <item>Học hành</item>
        <item>Giao lưu, quan hệ</item>
    </string-array>
    <string-array name="accounts">
        <item>Ví</item>
        <item>ATM</item>
        <item>Tiết kiệm</item>
    </string-array>
    <string-array name="account_type">
        <item>Tiền mặt</item>
        <item>Tài khoản ngân hàng</item>
        <item>Thẻ tín dụng</item>
        <item>Tài khoản đầu tư</item>
        <item>Tài khoản tiết kiệm</item>
        <item>Khác</item>
    </string-array>
    <string-array name="money_type">
        <item>VND</item>
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
    </string-array>
    <string-array name="report_view_by">
        <item>Tháng</item>
        <item>Quý</item>
        <item>Năm</item>
        <item>Khoảng thời gian</item>
    </string-array>
    <string-array name="setting_language">
        <item>Tiếng Việt</item>
        <item>Tiếng Anh</item>
    </string-array>
</resources>
