<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundForm"
    tools:context="com.example.nguyennam.financialbook.recordtab.Calculator">

    <LinearLayout
        android:id="@+id/calculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnKeyC"
                style="@style/KeyPassCode"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button_orange"
                android:text="@string/KeyC" />

            <Button
                android:id="@+id/btnKeyMulti"
                style="@style/KeyPassCode"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button_keyboard"
                android:text="@string/KeyMulti"

                />

            <Button
                android:id="@+id/btnKeyDivide"
                style="@style/KeyPassCode"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button_keyboard"
                android:text="@string/KeyDivide"

                />

            <ImageButton
                android:id="@+id/btnKeyBack"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button_keyboard"
                android:contentDescription="@string/noname"
                android:src="@drawable/ic_action_backspace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnKey7"
                style="@style/KeyPassCode"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button_number"
                android:text="@string/Key7" />

            <Button
                android:id="@+id/btnKey8"
                style="@style/KeyPassCode"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button_number"
                android:text="@string/Key8" />

            <Button
                android:id="@+id/btnKey9"
                style="@style/KeyPassCode"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button_number"
                android:text="@string/Key9" />

            <Button
                android:id="@+id/btnKeyPlus"
                style="@style/KeyPassCode"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button_keyboard"
                android:text="@string/KeyAdd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnKey4"
                style="@style/KeyPassCode"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button_number"
                android:text="@string/Key4" />

            <Button
                android:id="@+id/btnKey5"
                style="@style/KeyPassCode"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button_number"
                android:text="@string/Key5" />

            <Button
                android:id="@+id/btnKey6"
                style="@style/KeyPassCode"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button_number"
                android:text="@string/Key6" />

            <Button
                android:id="@+id/btnKeyMinus"
                style="@style/KeyPassCode"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button_keyboard"
                android:text="@string/KeyMinus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnKey1"
                style="@style/KeyPassCode"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button_number"
                android:text="@string/Key1" />

            <Button
                android:id="@+id/btnKey2"
                style="@style/KeyPassCode"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button_number"
                android:text="@string/Key2" />

            <Button
                android:id="@+id/btnKey3"
                style="@style/KeyPassCode"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button_number"
                android:text="@string/Key3" />

            <Button
                style="@style/KeyPassCode"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button_keyboard" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">

            <Button
                android:id="@+id/btnKey0"
                style="@style/KeyPassCode"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button_number"
                android:text="@string/Key0" />

            <Button
                android:id="@+id/btnKey000"
                style="@style/KeyPassCode"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button_number"
                android:text="@string/Key000" />

            <Button
                android:id="@+id/btnKeyDot"
                style="@style/KeyPassCode"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button_number"
                android:text="@string/KeyDot" />

            <Button
                android:id="@+id/btnKeyEqual"
                style="@style/TextHeader"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button_green"
                android:text="@string/KeyDone" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@id/calculator"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/txtExpression"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="end|center"
            android:textColor="@color/darkBlack"
            android:textSize="25sp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/edtDisplay"
            style="@style/InputMoneyKeyboard"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:enabled="false"
            android:gravity="center|end"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:textColor="@color/black"
            android:textSize="40sp" />

    </LinearLayout>

</RelativeLayout>
