<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/BackgroundForm"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dateOfMonth"
                style="@style/ReportBold"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/calendar"
                android:gravity="center"
                android:text="@string/Key8" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dateOfWeek"
                style="@style/ReportNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dateOfWeek" />

            <TextView
                android:id="@+id/date"
                style="@style/ReportNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Date" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end"
        android:layout_gravity="center_vertical">

        <TextView
            style="@style/ReportNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvExpense" />

        <TextView
            android:id="@+id/txtExpense"
            style="@style/ReportNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/SoTien" />

        <TextView
            style="@style/ReportNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/money" />

    </LinearLayout>

</LinearLayout>