<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:gravity="center"
    android:background="@drawable/selector_listview_ismac"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

            <TextView
                android:id="@+id/txtCategoryIncome"
                style="@style/FormEditValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incomeHistory"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/report_percent_line">

            <TextView
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_marginBottom="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1.0"
                android:background="@color/incomeColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtAmountMoney"
                style="@style/FormEditTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/Accounts" />

            <TextView
                style="@style/FormEditTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/money"/>

            <TextView
                style="@style/FormEditTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/open"/>

            <TextView
                android:id="@+id/txtMoneyPercent"
                style="@style/FormEditTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/FormEditTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>