<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/selector_listview_ismac"
    android:orientation="vertical"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtIsExpense"
                    style="@style/FormEditValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expenseHistory" />

                <TextView
                    android:id="@+id/txtCategory"
                    style="@style/FormEditValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/Category" />

            </LinearLayout>

            <TextView
                android:id="@+id/txtDescription"
                style="@style/FormEditTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <TextView
                    android:id="@+id/txtMoney"
                    style="@style/FormEditValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Amount" />

                <TextView
                    android:id="@+id/lbCurrency"
                    style="@style/FormEditValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/money" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgAccount"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/Accounts"
                    android:paddingEnd="0dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="0dp"
                    android:paddingStart="4dp"
                    android:src="@drawable/wallet" />

                <TextView
                    android:id="@+id/txtAccountType"
                    style="@style/FormEditTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_toLeftOf="@id/imgAccount"
                    android:layout_toStartOf="@id/imgAccount"
                    android:gravity="end"
                    android:text="@string/Accounts" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:background="@color/Line" />

</LinearLayout>