<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtFinancial"
                style="@style/FormEditValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expenseHistory" />

            <TextView
                android:id="@+id/txtCategory"
                style="@style/FormEditValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/Category" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtDate"
            style="@style/FormEditTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Date" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <TextView
                android:id="@+id/txtAmountMoney"
                style="@style/FormEditValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SoTien" />

            <TextView
                android:id="@+id/txtVND"
                style="@style/FormEditValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/money" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <TextView
                android:id="@+id/lbRemain"
                style="@style/FormEditTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remain" />

            <TextView
                android:id="@+id/txtRemainMoney"
                style="@style/FormEditTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/SoTien" />

            <TextView
                style="@style/FormEditTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/money" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>